fix about spacing

--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ table{
   text-decoration: none !important;
   transform: translateX(-50%) translateY(-50%);
   position: absolute;
-  top: 50%;
+  top: 52%;
   left: 50%;
 
 }
